--- a/static/css/pages/post.css
+++ b/static/css/pages/post.css
@@ -7,6 +7,7 @@
     width: 100%;
     margin-inline: auto;
     padding: 1rem;
+    padding-bottom: 0;
 
     display: flex;
     flex-direction: column;
